HW5SERVER/tests/output/t20.out
lli: tmp.ll:33:9: error: '%t0' defined with type 'i1' but expected 'i32'
ret i32 %t0
        ^
